chore: refactoring to add test setup